cdda: Fix abort() with CD-Text outside ASCII

CD-Text doesn't specify encoding, but in practice some discs have
strings with extended characters. Using those directly will make D-Bus
choke with invalid data. Fixed by assuming latin-1.

This also fixes a memory leak in the cdtext_get() usage.

https://bugzilla.gnome.org/show_bug.cgi?id=671259